add outputconfiguration + change endpoint
